# manim-animation-geneator

./: .env.example  .gitignore  README.md  graph_entrypoint.py  langgraph.json  pyproject.toml
app/: streamlit_app.py
core/: __init__.py  config.py  models.py
core/graph/: __init__.py  builder.py  nodes.py  state.py
core/llm/: openai_client.py  prompts.py
core/manim_client/: __init__.py  interfaces.py  mcp_client.py  safety.py
mcp_servers/manim_server/: __init__.py  main.py
