[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manim-animation-generator"
version = "0.1.0"
description = "AI-powered Manim animation generator using LangGraph and MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.4",
    "langgraph>=0.2.0",
    "openai>=1.0.0",
    "streamlit>=1.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "manim>=0.18.0",
    "langgraph-cli[inmem]>=0.4.12",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "app", "mcp_servers"]
